--- a/src/content/lessen/wiskunde/rekenen_rationaal/komma_naar_breuk/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/komma_naar_breuk/index.mdx
@@ -4,6 +4,7 @@ date: 2021-01-08T11:24:00+02:00
 weight: 3
 tags: ["komma naar breuk", "kommagetal naar breuk", "kommagetal omzetten", "begrensde decimale vorm naar breuk", "onbegrensde repeterende decimale vorm naar breuk"]
 description: "Hier leggen we uit hoe je een kommagetal kan omzetten naar een breuk. We bespreken zowel de methode om begrensde decimale vormen als onbegrensde repeterende decimale vormen om te zetten naar een breuk."
+image: img/ti84_kommagetal.png
 ---
 
 Hoewel breuken er soms wat angstaanjagend kunnen uitzien, is het in veel gevallen toch **eenvoudiger om met breuken te rekenen dan met kommagetallen**. Een vermenigvuldiging, bijvoorbeeld, gaat gemakkelijker met breuken dan met kommagetallen:
@@ -27,7 +28,7 @@ Naast vermenigvuldigingen, zijn ook delingen, machten en wortels vaak **veel een
 
 Een laatste voordeel van breuken is dat je die <Mute>(in tegenstelling tot kommagetallen)</Mute> niet hoeft af te ronden, waardoor je **afrondingsfouten vermijdt**.
 
-Redenen genoeg dus om een kommagetal te kunnen omzetten naar een breuk! In deze les leggen we uit hoe je dat kan aanpakken. In de eerste paragraaf tonen we de **verschillende vormen waarin een kommagetal kan voorkomen**. In de paragrafen nadien leggen we **voor elk van deze vormen uit hoe je die kan omzetten** naar een breuk. In de laatste paragraaf leggen we je uit hoe je **met behulp van het rekentoestel** een kommagetal kan omzetten naar een breuk.
+Redenen genoeg dus om een kommagetal te kunnen omzetten naar een breuk! In deze les leggen we uit hoe je dat kan aanpakken. In de eerste paragraaf tonen we de **verschillende vormen waarin een kommagetal kan voorkomen**. In de paragrafen nadien leggen we **voor elk van deze vormen uit hoe je die kan omzetten** naar een breuk. In de laatste paragraaf leggen we je uit hoe je **met behulp van een grafisch rekentoestel** een kommagetal kan omzetten naar een breuk.
 
 ## Begrensde en onbegrensde decimale vormen
 
@@ -205,23 +206,23 @@ Door een bepaald getal te delen door zoveel keer het cijfer $9$ als het aantal c
 | $$-\frac{\orange{102}}{999}$$ | $$-0{,}\orange{102}1021021\ldots$$ | $$\orange{102}$$ |
 | $$-\frac{\orange{845}}{999}$$ | $$-0{,}\orange{845}8458458\ldots$$ | $$\orange{845}$$ |
 
-Merk op dat wanneer we een getal delen door **meer cijfers $9$** dan dat dat getal heeft, we een kommagetal krijgen waarbij er **nulletjes vooraan in de periode** bij zijn gekomen. Er komen zoveel nulletjes bij **tot de periode evenveel cijfers heeft** als het aantal cijfers $9$ waardoor we gedeeld hebben:
+Wanneer we een getal delen door **meer cijfers $9$** dan het aantal cijfers dat dat getal heeft, we een kommagetal krijgen waarbij er **nulletjes vooraan in de periode** bij zijn gekomen. Voor elke extra $9$ komt er een $0$ bij:
 
 $$
 \begin{aligned}
-\frac{8}{\underbrace{99}_{\text{\orange{twee} keer cijfer}~9}} &= 0{,}\orange{08}08080808\ldots\\
+\frac{8}{\underbrace{\orange{9}9}_{\text{\orange{één} cijfer}~9~\text{extra}}} &= 0{,}\orange{0}8\orange{0}8\orange{0}8\orange{0}8\orange{0}8\ldots\\
 \\
-\frac{6}{\underbrace{999}_{\text{\orange{drie} keer cijfer}~9}} &= 0{,}\orange{006}0060060\ldots\\
+\frac{6}{\underbrace{\orange{99}9}_{\text{\orange{twee} cijfers}~9~\text{extra}}} &= 0{,}\orange{00}6\orange{00}6\orange{00}6\ldots\\
 \\
--\frac{47}{\underbrace{999}_{\text{\orange{drie} keer cijfer}~9}} &= -0{,}\orange{047}0470470\ldots\\
+-\frac{47}{\underbrace{\orange{9}99}_{\text{\orange{één} cijfer}~9~\text{extra}}} &= -0{,}\orange{0}47\orange{0}47\orange{0}47\ldots\\
 \\
-\frac{51}{\underbrace{9999}_{\text{\orange{vier} keer cijfer}~9}} &= 0{,}\orange{0051}00510051\ldots\\
+\frac{51}{\underbrace{\orange{99}99}_{\text{\orange{twee} cijfers}~9~\text{extra}}} &= 0{,}\orange{00}51\orange{00}51\orange{00}51\ldots\\
 \end{aligned}
 $$
 
 ### Zuiver repeterende decimale vorm omzetten naar een breuk
 
-In de vorige paragraaf leerden we dat wanneer je een bepaald getal deelt door zoveel keer het cijfer $9$ als het aantal cijfers in dat getal, we een kommagetal krijgen in **zuiver repeterende decimale vorm** waarbij **dat getal de periode is** en er **voor de komma een $0$ staat**. We leerden ook dat wanneer we een getal delen door **meer cijfers $9$** dan dat dat getal heeft, we een kommagetal krijgen <Mute>(weer in zuiver repeterende decimale vorm met voor de komma een $0$)</Mute> waarbij er **nulletjes vooraan in de periode** bij zijn gekomen zodat de periode evenveel cijfers heeft als het aantal cijfers $9$ waardoor we deelden.
+In de vorige paragraaf leerden we dat wanneer je een bepaald getal deelt door zoveel keer het cijfer $9$ als het aantal cijfers in dat getal, we een kommagetal krijgen in **zuiver repeterende decimale vorm** waarbij **dat getal de periode is** en er **voor de komma een $0$ staat**. We leerden ook dat wanneer we een getal delen door **meer cijfers $9$** dan het aantal cijfers dat dat getal heeft, we een kommagetal krijgen <Mute>(weer in zuiver repeterende decimale vorm met voor de komma een $0$)</Mute> waarbij er **voor elke extra $9$ een extra $0$ vooraan in de periode bijkomt**.
 
 We kunnen nu ook omgekeerd te werk gaan en kommagetallen met een **zuiver repeterende** decimale vorm en een **$0$ voor de komma** gaan **omzetten naar een breuk** <Mute>(wat overeenkomt met een deling)</Mute>. Bijvoorbeeld:
 
@@ -232,7 +233,7 @@ $$
 \\
 -0{,}\orange{4}4444444\ldots &= -\frac{\orange{4}}{9}\\
 \\
--0{,}\orange{023}02323\ldots &= -\frac{\orange{23}}{999}\\
+-0{,}\orange{023}023023\ldots &= -\frac{\orange{23}}{\orange{9}99}\\
 \\
 0{,}\orange{6}66666666\ldots &= \frac{\orange{6}}{9}\\
 &= \frac{2}{3}
@@ -243,9 +244,9 @@ Maar wat als we nu een kommagetal hebben in zuiver repeterende decimale vorm waa
 
 $$
 \begin{aligned}
-8{,}\orange{5}555555\ldots\\
--42{,}\orange{83}83838383\ldots\\
-281{,}\orange{2}222222\ldots
+\orange{8}{,}5555555\ldots\\
+\orange{-42}{,}8383838383\ldots\\
+\orange{281}{,}2222222\ldots
 \end{aligned}
 $$
 
@@ -253,20 +254,20 @@ Wel in dat geval gaan we het **kommagetal opsplitsen** om het **getal voor de ko
 
 $$
 \begin{aligned}
-8{,}\orange{5}555555\ldots &= 8 + 0{,}\orange{5}555555\ldots\\
-&= \frac{8}{1} + \frac{\orange{5}}{9}\\
+\orange{8}{,}5555555\ldots &= \orange{8} + 0{,}5555555\ldots\\
+&= \frac{\orange{8}}{1} + \frac{5}{9}\\
 &= \frac{72}{9} + \frac{5}{9}\\
 &= \frac{77}{9}\\
 \\
--42{,}\orange{63}63636363\ldots &= -(42 + 0{,}\orange{63}63636363\ldots)\\
-&= - \left(\frac{42}{1} + \frac{\orange{63}}{99}\right)\\
-&= - \left(\frac{42}{1} + \frac{7}{11}\right)\\
+\orange{-42}{,}6363636363\ldots &= -(\orange{42} + 0{,}6363636363\ldots)\\
+&= - \left(\frac{\orange{42}}{1} + \frac{63}{99}\right)\\
+&= - \left(\frac{\orange{42}}{1} + \frac{7}{11}\right)\\
 &= - \left(\frac{462}{11} + \frac{7}{11}\right)\\
 &= - \frac{469}{11}\\
 \\
-1{,}\orange{2}222222\ldots &= 1 + 0{,}\orange{2}222222\ldots\\
-&= \frac{1}{1} + \frac{\orange{2}}{9}\\
-&= \frac{9}{9} + \frac{\orange{2}}{9}\\
+\orange{1}{,}2222222\ldots &= \orange{1} + 0{,}2222222\ldots\\
+&= \frac{\orange{1}}{1} + \frac{2}{9}\\
+&= \frac{9}{9} + \frac{2}{9}\\
 &= \frac{11}{9}
 \end{aligned}
 $$
@@ -286,7 +287,7 @@ $$
 \end{aligned}
 $$
 
-Om een gemengd repeterende decimale vorm om te zetten naar een breuk, gaan we ons eerst afvragen welke **zuiver repeterende** decimale vorm we kunnen krijgen door enkel de **komma te verschuiven**. Vervolgens kijken we door welke macht van $10$ <Mute>($10$, $100$, $1000$, $10~000$ etc.)</Mute> we die zuiver repeterende decimale vorm moeten **delen** om uit te komen bij de gemengde decimale vorm van de opgave.
+Om een gemengd repeterende decimale vorm om te zetten naar een breuk, gaan we ons eerst afvragen welke **zuiver repeterende** decimale vorm we kunnen krijgen door enkel de **komma te verschuiven**.
 
 Neem bijvoorbeeld de volgende gemengd repeterende decimale vorm:
 
@@ -300,13 +301,13 @@ $$
 270{,}\orange{36}3636\ldots
 $$
 
-Maar dat getal is natuurlijk niet meer gelijk aan het getal in de opgave:
+Het probleem is nu echter dat dat getal niet meer gelijk is aan het getal in de opgave:
 
 $$
 \underbrace{2{,}70\orange{36}3636\ldots}_{\text{Opgave}} \neq 270{,}\orange{36}3636\ldots
 $$
 
-We moeten de zuiver repeterende decimale vorm nog **delen door een macht van $10$** om de gelijkheid wél te laten kloppen! Omdat de komma twee plaatsen naar rechts is verschoven, is ons getal aan de rechterkant **$100$ <Mute>(of $10^2$)</Mute> keer groter dan de opgave**. We kunnen het getal rechts dus gelijk maken aan de opgave door het terug **$100$ keer kleiner** te maken. Dat betekent dat we moeten **delen door $100$**:
+Omdat we in ons voorbeeld de komma **twee plaatsen naar rechts** hebben verschoven, is ons getal aan de rechterkant **$100$ <Mute>(of $10^\bold{2}$)</Mute> keer groter dan de opgave**. We kunnen het getal rechts dus gelijk maken aan de opgave door het terug **$100$ keer kleiner** te maken. Dat betekent dat we moeten **delen door $100$**:
 
 $$
 \underbrace{2{,}70363636\ldots}_{\text{Opgave}} = \frac{270{,}363636\ldots}{\orange{100}}
@@ -318,7 +319,9 @@ $$
 \underbrace{2{,}70363636\ldots}_{\text{Opgave}} = \frac{1}{100}\cdot 270{,}363636\ldots
 $$
 
-We hebben ons kommagetal met **gemengd repeterende** decimale vorm **omgezet naar een zuiver repeterende** decimale vorm. Met de technieken uit de vorige paragraaf kunnen we nu verder om het kommagetal om te zetten naar een breukvorm:
+In het algemeen gaan we, wanneer we de komma $n$ plaatsen naar rechts opschuiven, vóór het nieuwe kommagetal een vermenigvuldiging met $\frac{1}{10^n}$ schrijven. In ons voorbeeld was $n = 2$, dus moesten we $\frac{1}{10^2}$, wat hetzelfde is als $\frac{1}{100}$, voor het nieuwe kommagetal zetten.
+
+We hebben ons kommagetal met **gemengd repeterende** decimale vorm nu **omgezet naar een zuiver repeterende** decimale vorm. Met [de technieken uit de vorige paragraaf](#zuiver-repeterende-decimale-vorm-omzetten-naar-een-breuk) kunnen we nu verder om het kommagetal om te zetten naar een breukvorm:
 
 $$
 \begin{aligned}
@@ -357,7 +360,15 @@ $$
 &= \frac{1}{100} \cdot 0{,}\orange{3}33\ldots\\
 &= \frac{1}{100} \cdot \frac{\orange{3}}{9}\\
 &= \frac{1}{100} \cdot \frac{1}{3}\\
-&= \boxed{\frac{1}{300}}
+&= \boxed{\frac{1}{300}}\\
+\\
+1{,}0\orange{04}0404\ldots &= \frac{1}{10}\cdot 10{,}\orange{04}0404\ldots\\
+&= \frac{1}{10} \cdot \left(10 + 0{,}\orange{04}0404\ldots\right)\\
+&= \frac{1}{10} \cdot \left(\frac{10}{1} + \frac{\orange{4}}{\orange{99}}\right)\\
+&= \frac{1}{10} \cdot \left(\frac{990}{99} + \frac{\orange{4}}{\orange{99}}\right)\\
+&= \frac{1}{10} \cdot \frac{994}{99}\\
+&= \frac{994}{990}\\
+&= \boxed{\frac{497}{495}}
 \end{aligned}
 $$
 
@@ -366,7 +377,7 @@ $$
 
 Hoera! 🎉 Met de technieken uit de vorige paragrafen kunnen we **eender welk kommagetal met een begrensde of onbegrensd repeterende decimale vorm omzetten naar een breuk**! We zijn weer een waardevolle vaardigheid rijker! 💃
 
-Het omzetten van een kommagetal met een onbegrensd repeterende decimale vorm, kunnen we echter nog op een tweede belangrijke manier doen: door gebruik te maken van **vergelijkingen**. Met behulp van deze manier gaan we ook kunnen begrijpen waar ons trucje met het delen door $9$ en $99$ en $999$ enz. vandaan komt.
+Het omzetten van een kommagetal met een onbegrensd repeterende decimale vorm, kunnen we echter nog op een tweede belangrijke manier doen: door gebruik te maken van **vergelijkingen**.
 
 Eerst en vooral moeten we inzien dat we altijd een macht van $10$ kunnen vinden waarmee we een kommagetal met een onbegrensd repeterende decimale vorm kunnen vermenigvuldigen zodat de **uitkomst dezelfde cijfers na de komma heeft**. Neem bijvoorbeeld
 
@@ -374,12 +385,12 @@ $$
 5{,}222222\ldots
 $$
 
-Wanneer we dat kommagetal met zuiver repeterende decimale vorm gaan vermenigvuldigen met $10$, krijgen we:
+Wanneer we dat kommagetal gaan vermenigvuldigen met $10$, krijgen we:
 
 $$
 \begin{aligned}
-5{,}\orange{222222\ldots}\cdot 10
-&= 52{,}\orange{222222\ldots}
+5{,}222222\ldots\cdot 10
+&= 52{,}222222\ldots
 \end{aligned}
 $$
 
@@ -387,8 +398,8 @@ Als we een kommagetal van zuiver repeterende decimale vorm met een langere perio
 
 $$
 \begin{aligned}
-9{,}\orange{373737\ldots}\cdot 100
-&= 937{,}\orange{373737\ldots}
+9{,}373737\ldots\cdot 100
+&= 937{,}373737\ldots
 \end{aligned}
 $$
 
@@ -396,11 +407,11 @@ Je ziet dat we in beide voorbeelden na de vermenigvuldiging met een bepaalde mac
 
 $$
 \begin{aligned}
--13{,}\orange{666666\ldots} \cdot 10 &= - 136{,}\orange{666666\ldots}\\
+-13{,}666666\ldots \cdot 10 &= - 136{,}666666\ldots\\
 \\
-8{,}\orange{434343\ldots} \cdot 100 &= 843{,}\orange{434343\ldots} \\
+8{,}434343\ldots\cdot 100 &= 843{,}434343\ldots \\
 \\
-51{,}\orange{431431\ldots} \cdot 1000 &= 51{ }431{,}\orange{431431\ldots} \\
+51{,}431431\ldots \cdot 1000 &= 51~431{,}431431\ldots \\
 \\
 \end{aligned}
 $$
@@ -456,13 +467,13 @@ Vervolgens kunnen we die laatste vergelijking omvormen naar $x$ en **vinden we a
 
 $$
 \begin{aligned}
-9x &= 47\ldots\\
+9x &= 47\\
 \Lrarr \frac{9x}{\orange{9}} &= \frac{47}{\orange{9}}\\
 \Lrarr x &= \frac{47}{9}
 \end{aligned}
 $$
 
-Een kommagetal een **gemengd repeterende** decimale vorm heeft, kunnen we op een gelijkaardige manier omzetten naar een breuk. Daar zullen we **met een extra macht van $10$ moeten vermenigvuldigen** om de niet-repeterende decimalen vóór de komma te krijgen. Stel bijvoorbeeld dat we het kommagetal $2{,}643333\ldots$ willen omzetten naar een breuk:
+Wanneer een kommagetal een **gemengd repeterende** decimale vorm heeft, kunnen we dat kommagetal op een gelijkaardige manier omzetten naar een breuk. Daar zullen we **met een extra macht van $10$ moeten vermenigvuldigen** om eerst de niet-repeterende decimalen vóór de komma te krijgen. Stel bijvoorbeeld dat we het kommagetal $2{,}643333\ldots$ willen omzetten naar een breuk:
 
 $$
 x = 2{,}643333\ldots
@@ -477,7 +488,7 @@ $$
 \end{aligned}
 $$
 
-We hebben rechts nu een zuiver repterend decimale vorm. Nu kunnen we dus verder zoals voordien. Eerst zoeken we een macht van $10$ waarmee we kunnen vermenigvuldigen om een nieuw kommagetal te krijgen met dezelfde decimalen. Dat is in dit geval $10$:
+We hebben rechts nu een zuiver repterend decimale vorm. Nu kunnen we verder zoals voordien. Eerst zoeken we een macht van $10$ waarmee we kunnen vermenigvuldigen om een **nieuw kommagetal te krijgen met dezelfde decimalen**. Dat is in dit geval $10$:
 
 $$
 \begin{aligned}
@@ -502,9 +513,9 @@ Even alles op een rijtje zetten. Om een bepaald kommagetal om te zetten naar een
 <Attention title="Vergelijking gebruiken om breuk naar kommagetal om te zetten">
 
 1. Stel $x$ gelijk aan het kommagetal.
-2. Als het kommagetal gemengd repeterend, vermenigvuldig dan beide leden van de vergelijking dan met een  macht van $10$ die ervoor zorgt dat het niet-repeterend deel vóór de komma komt te staan.
-3. Vermenigvuldig de linker- en rechterkant van de vergelijking met een macht van $10$ die ervoor zorgt dat we een **nieuw kommagetal krijgen met dezelfde decimalen**.
-4. Trek de vergelijking uit stap 1 af van de vergelijking uit stap 2. Je krijgt zo een vergelijking met **enkel gehele getallen**.
+2. Als het kommagetal gemengd repeterend is, vermenigvuldig beide leden van de vergelijking dan met een  macht van $10$ die ervoor zorgt dat het niet-repeterend deel vóór de komma komt te staan.
+3. Vermenigvuldig de linker- en rechterkant van de vergelijking met een macht van $10$ die ervoor zorgt dat we rechts een **nieuw kommagetal krijgen met dezelfde decimalen**.
+4. Trek de vergelijking uit stap 2 af van de vergelijking uit stap 3. Je krijgt zo een vergelijking met **enkel gehele getallen**.
 5. Deel de linker- en rechterkant van de vergelijking door de <Mute>(gehele)</Mute> coëfficiënt die bij de $x$ staat. Je krijgt rechts een **breukvorm van het oorspronkelijke kommagetal**.
 6. Vereenvoudig eventueel de breuk.
 
@@ -512,20 +523,20 @@ Even alles op een rijtje zetten. Om een bepaald kommagetal om te zetten naar een
 
 Enkele andere voorbeelden:
 
-* Zet $-13{,}\orange{666666\ldots}$ om naar een breuk.
+* Zet $-13{,}666666\ldots$ om naar een breuk.
 Eerst **stellen we $x$ gelijk aan het kommagetal**. Het kommagetal heeft al een zuiver repeterende vorm, dus we kunnen meteen zoeken naar de macht van $10$ die ervoor zorgt dat we een **nieuw kommagetal krijgen met dezelfde decimalen**. Dat is in dit geval $10$:
 $$
 \begin{aligned}
-x &= -13{,}\orange{666666\ldots}\\
-\Lrarr 10\cdot x &= 10\cdot \left(-13{,}\orange{666666\ldots}\right)\\
-\Lrarr 10\cdot x &= - 136{,}\orange{666666\ldots}\\
+x &= -13{,}666666\ldots\\
+\Lrarr 10\cdot x &= 10\cdot \left(-13{,}666666\ldots\right)\\
+\Lrarr 10\cdot x &= - 136{,}666666\ldots\\
 \end{aligned}
 $$
 Vervolgens trekken we de eerste vergelijking <Mute>(namelijk $x = -13{,}666666\ldots$)</Mute> af van de laatste vergelijking <Mute>($10\cdot x = - 136{,}666666\ldots$)</Mute> :
 $$
 \begin{array}{rrl}
-   & 10\cdot x &= - 136{,}\cancel{\orange{666666\ldots}}\\
-  -(& x &= -\phantom{6}13{,}\cancel{\orange{666666\ldots}})\\
+   & 10\cdot x &= - 136{,}\cancel{666666\ldots}\\
+  -(& x &= -\phantom{6}13{,}\cancel{666666\ldots})\\
    \hline
    & 9x &= - 123\\
 \end{array}
@@ -541,7 +552,7 @@ We krijgen de vergelijking
 $$
 9x = - 123 
 $$
-Die kunnen we omvormen naar $x$ door linker- en rechterlid te delen door $9$. We krijgen zo de breukvorm van $-13{,}\orange{666666\ldots}$:
+Die kunnen we omvormen naar $x$ door linker- en rechterlid te delen door $9$. We krijgen zo de breukvorm van $-13{,}666666\ldots$:
 $$
 \begin{aligned}
 9x &= - 123\\
@@ -551,34 +562,33 @@ $$
 \end{aligned}
 $$
 Merk op dat we de breuk in de laatste stap hebben **vereenvoudigd**.
-* Zet $8{,}60\orange{4444\ldots}$ om naar een breuk. 
+* Zet $8{,}604444\ldots$ om naar een breuk. 
 Eerst **stellen we $x$ gelijk aan het kommagetal**. Het kommagetal heeft een **gemengd repeterende** decimale vorm, dus eerst moeten we vermenigvuldigen met een macht van $10$ die ervoor zorgt dat we een **zuiver repeterende** decimale vorm krijgen. Wanneer de komma twee plaatsen naar rechts zou schuiven, krijgen we een zuiver repeterende vorm. Dat betekent dat we moeten vermenigvuldigen met $100$ <Mute>($=10^2$)</Mute>:
 $$
 \begin{aligned}
-x &= 8{,}60\orange{4444\ldots}\\
-\Lrarr 100\cdot x &= 100\cdot 8{,}60\orange{4444\ldots}\\
-\Lrarr 100\cdot x &= 860{,}\orange{444444\ldots}\\
+x &= 8{,}604444\ldots\\
+\Lrarr 100\cdot x &= 100\cdot 8{,}604444\ldots\\
+\Lrarr 100\cdot x &= 860{,}444444\ldots\\
 \end{aligned}
 $$
 Nu hebben we een zuiver repeterende decimale vorm, dus moeten we zoeken naar de macht van $10$ die ervoor zorgt dat we een **nieuw kommagetal krijgen met dezelfde decimalen**. Dat is in dit geval $10$:
 $$
 \begin{aligned}
-100\cdot x &= 860{,}\orange{444444\ldots}\\
-\Lrarr 10\cdot 100\cdot x &= 10\cdot 860{,}\orange{444444\ldots}\\
-\Lrarr 10\cdot 100\cdot x &= 8604{,}\orange{444444\ldots}\\
-\Lrarr 1000\cdot x &= 8604{,}\orange{444444\ldots}\\
+100\cdot x &= 860{,}444444\ldots\\
+\Lrarr \orange{10} \cdot 100\cdot x &= \orange{10} \cdot 860{,}444444\ldots\\
+\Lrarr 1000\cdot x &= 8604{,}444444\ldots\\
 \end{aligned}
 $$
 Vervolgens trekken we de eerste vergelijkingen met zuiver repeterende decimale vorm af van de laatste:
 $$
 \begin{array}{rrl}
-   & 1000\cdot x &= 8604{,}\cancel{\orange{444444\ldots}}\\
-  -(& 100\cdot x &= 860{,}\cancel{\orange{444444\ldots}})\\
+   & 1000\cdot x &= 8604{,}\cancel{444444\ldots}\\
+  -(& 100\cdot x &= 860{,}\cancel{444444\ldots})\\
    \hline
    & 900x &= 7744\\
 \end{array}
 $$
-De vergelijking die we nu krijgen, kunnen we omvormen  aar $x$ door linker- en rechterlid te delen door $900$. We krijgen zo de breukvorm van $8{,}60\orange{4444\ldots}$:
+De vergelijking die we nu krijgen, kunnen we omvormen  aar $x$ door linker- en rechterlid te delen door $900$. We krijgen zo de breukvorm van $8{,}604444\ldots$:
 $$
 \begin{aligned}
 900x &= 7744\\
@@ -587,27 +597,27 @@ x &= \frac{7744}{\orange{900}}\\
 \Lrarr x &= \boxed{\frac{1936}{225}}
 \end{aligned}
 $$
-* Zet $-2{,}4\orange{787878\ldots}$ om naar een breuk.
+* Zet $-2{,}4787878\ldots$ om naar een breuk.
 Eerst gelijkstellen aan $x$ en omvormen naar zuiver repeterende decimale vorm:
 $$
 \begin{aligned}
-x &= -2{,}4\orange{787878\ldots}\\
-\Lrarr 10\cdot x &= 10\cdot ( - 2{,}4\orange{787878\ldots})\\
-\Lrarr 10\cdot x &= - 24{,}\orange{787878\ldots}\\
+x &= -2{,}4787878\ldots\\
+\Lrarr 10\cdot x &= 10\cdot ( - 2{,}4787878\ldots)\\
+\Lrarr 10\cdot x &= - 24{,}787878\ldots\\
 \end{aligned}
 $$
 Omvormen naar kommagetal met dezelfde decimalen:
 $$
 \begin{aligned}
-\Lrarr 100\cdot 10\cdot x &= 100\cdot (- 24{,}\orange{787878\ldots})\\
-\Lrarr 1000\cdot x &= - 2478{,}\orange{787878\ldots}\\
+\Lrarr 100\cdot 10\cdot x &= 100\cdot (- 24{,}787878\ldots)\\
+\Lrarr 1000\cdot x &= - 2478{,}787878\ldots\\
 \end{aligned}
 $$
 Laatste vergelijking aftrekken van de eerste vergelijking met een zuiver repeterende decimale vorm:
 $$
 \begin{array}{rrl}
-   & 1000\cdot x &= - 2478{,}\cancel{\orange{787878\ldots}}\\
-  -(& 10\cdot x &= - 24{,}\cancel{\orange{787878\ldots}})\\
+   & 1000\cdot x &= - 2478{,}\cancel{787878\ldots}\\
+  -(& 10\cdot x &= - 24{,}\cancel{787878\ldots})\\
    \hline
    & 990x &= 2502\\
 \end{array}
@@ -622,41 +632,72 @@ $$
 \end{aligned}
 $$
 
-## Kommagetal omzetten naar breuk met rekenmachine
+## Kommagetal omzetten naar breuk met een grafisch rekenmachine
 
-We kunnen ook een rekenmachine gebruiken om een kommagetal om te zetten naar een breuk. Daarvoor moet je op zoek gaan naar een knop of functie die iets zegt als "**▶FRAC**" <Mute>(*frac* is een afkorting van het Engelse *fraction*, wat *breuk* betekent)</Mute>.
+We kunnen ook een rekenmachine gebruiken om een kommagetal om te zetten naar een breuk. Uiteraard bestaan er veel verschillende modellen van rekenmachines en kunnen we ze onmogelijk allemaal hier bespreken. Hier geef ik de uitleg voor de TI-84 Plus, maar ze geldt ook voor TI-83, TI-84 Plus CE etc. Laat gerust in de reacties weten als je een ander type rekenmachine hebt en je de functie voor het omzetten tussen kommagetal en breuk niet weet te vinden.
 
-Uiteraard bestaan er veel verschillende modellen van rekenmachines en kunnen we ze onmogelijk allemaal hier bespreken. Ik heb er twee populaire modellen uitgepikt. Normaal zou de werkwijze bij jouw rekentoestel niet veel mogen verschillen van een van deze twee modellen.
+Bij de grafische rekenmachines van Texas Instruments, vind je in het **MATH**-menu de "**▶FRAC**"-functie terug. Daarmee kan je een kommagetal omzetten naar een breuk.
+<Mute>(*Frac* is een afkorting van het Engelse *fraction*, wat *breuk* betekent)</Mute>.
+Concreet gaat het als volgt:
 
-### Grafisch rekenmachine: TI-84 Plus
+1. Geef het kommagetal in dat je wilt omzetten en druk op de **MATH**-toets om het **MATH**-menu te openen.
+2. De eerste optie is "**▶FRAC**". Duw op **ENTER** om deze functie te selecteren.
+3. Druk nogmaals op **ENTER** om de uitkomst te berekenen.
 
-Bij de grafische rekenmachines van Texas Instruments, vind je de "**▶FRAC**"-functie terug als de eerste optie van  het **MATH**-menu. Je kan een kommagetal omzetten als volgt:
+![Kommagetal omgezet naar breuk met grafisch rekentoestel GRM Texas Instruments TI-84 Plus](img/ti84_kommagetal.png)
 
-1. Geef het kommagetal in dat je wilt omzetten.
-![Kommagetal ingegeven in grafisch rekentoestel](img/grm_kommagetal.png)
-2. Druk op de **MATH**-toets om het **MATH**-menu te openen.
-![Math menu van grafisch rekentoestel](img/grm_math.png)
-3. De eerste optie is "**▶FRAC**". Duw op **ENTER** om deze functie te selecteren.
-![Frac functie van GRM om kommagetal om te zetten naar breuk](img/grm_kommagetal_frac.png)
-4. Druk nogmaals op **ENTER** om de uitkomst te berekenen.
-![Kommagetal omgezet naar breuk met grafisch rekentoestel](img/grm_breuk_uitkomst.png)
-
-Als je een berekening hebt gedaan waarvan je de uitkomst wilt omzetten naar een breuk, hoef je die uitkomst niet helemaal over te typen. Wanneer je **MATH > FRAC** induwt zonder eerst een kommagetal ingegeven te hebben, zal je rekentoestel automatisch de laatste uitkomst nemen <Mute>(**ANS**, afkorting voor het Engelse *answer*, of antwoord/uitkomst in het Nederlands)</Mute>.
-
-### Wetenschappelijke rekenmachine: TI-30XB
-
-TI-30XB MultiView™ wetenschappelijke rekenmachine
+Als je een berekening hebt gedaan waarvan je de uitkomst wilt omzetten naar een breuk, hoef je die uitkomst niet helemaal over te typen. Wanneer je **▶FRAC** selecteert zonder eerst een kommagetal ingegeven te hebben, zal je rekentoestel automatisch de laatste uitkomst nemen <Mute>(**ANS**, afkorting voor het Engelse *answer*, of antwoord/uitkomst in het Nederlands)</Mute>.
 
 ## Samengevat
 
-<Attention title="Zuiver repeterende decimale vorm">
+<Attention title="Begrensde en onbegrensde decimale vorm">
 
-Een kommagetal heeft een **zuiver repeterende** decimale vorm wanneer de **periode van de repeterende decimalen meteen na de komma begint**.
+Een kommagetal met een **begrensde decimale vorm** is een getal dat een **eindig aantal cijfers na de komma** heeft.
+
+Een kommagetal van **onbegrensde decimale vorm** is een getal dat **oneindig veel cijfers na de komma** heeft.
 
 </Attention>
 
-<Attention title="Gemengd repeterende decimale vorm">
+<Attention title="Begrensde decimale vorm omzetten naar een breuk">
 
-Een kommagetal heeft een **gemengd repeterende** decimale vorm wanneer de **periode van de repeterende decimalen *niet* meteen na de komma begint**.
+Een kommagetal met begrensde decimale vorm kan je als volgt omzetten naar een breuk:
+
+1. Zet het getal op **noemer $1$**.
+2. Vermenigvuldig teller en noemer met een **macht van $10$** <Mute>($10$, $100$, $1000$, $10~000$ etc.)</Mute> zodat er **geen komma meer in de teller staat**.
+3. **Vereenvoudig** de breuk.
+
+</Attention>
+
+<Attention title="Onbegrensd repeterende decimale vorm omzetten naar een breuk">
+
+Om een kommagetal met onbegrensde decimale vorm om te zetten naar een breuk, zullen we in bepaalde gevallen eerst wat *opkuiswerk* moeten doen:
+
+1. Als het kommagetal een **gemengd repeterende** decimale vorm heeft, **verschuif de komma** dan naar rechts tot het kommagetal een zuiver repeterende decimale vorm heeft. Schrijf $\frac{1}{10^n}\cdot$ voor het nieuwe kommagetal waarbij $n$ het aantal plaatsen is waarmee de komma is opgeschoven.
+2. Als er **voor de komma een getal verschillend van $0$** staat, splits het kommagetal dan op zodat het **geheel deel los staat van de decimalen**. Schrijf de opsplitsing tussen haakjes wanneer het kommagetal negatief is en/of wanneer je in voorgaande stap een vermenigvuldiging met $\frac{1}{10^n}$ hebt toegevoegd. Het minteken en/of de vermenigvuldiging met $\frac{1}{10^n}$ zet je dan voor de haakjes.
+
+Het kommagetal dat we nu nog hebben, bevat **voor de komma een nul** en **na de komma de repeterende decimalen**. Om zo'n kommagetal om te zetten naar een breuk, gaan we als volgt te werk:
+
+1. Tel het aantal cijfers in de periode. Schrijf in de **noemer even veel cijfers $9$ als dat er cijfers zijn in de periode**.
+2. In de **teller komt de periode van het kommagetal**. Als de periode **begint met nullen**, laat je die nullen weg.
+3. Vereenvoudig de breuk indien mogelijk.
+
+</Attention>
+
+<Attention title="Vergelijkingen gebruiken om kommagetallen om te zetten naar een breuk">
+
+1. Stel $x$ gelijk aan het kommagetal.
+2. Als het kommagetal gemengd repeterend is, vermenigvuldig beide leden van de vergelijking dan met een  macht van $10$ die ervoor zorgt dat het niet-repeterend deel vóór de komma komt te staan.
+3. Vermenigvuldig de linker- en rechterkant van de vergelijking met een macht van $10$ die ervoor zorgt dat we rechts een **nieuw kommagetal krijgen met dezelfde decimalen**.
+4. Trek de vergelijking uit stap 2 af van de vergelijking uit stap 3. Je krijgt zo een vergelijking met **enkel gehele getallen**.
+5. Deel de linker- en rechterkant van de vergelijking door de <Mute>(gehele)</Mute> coëfficiënt die links bij de $x$ staat. Je krijgt rechts een **breukvorm van het oorspronkelijke kommagetal**.
+6. Vereenvoudig eventueel de breuk.
+
+</Attention>
+
+<Attention title="Kommagetal omzetten naar breuk met een grafisch rekenmachine">
+
+1. Geef het kommagetal in dat je wilt omzetten en druk op de **MATH**-toets om het **MATH**-menu te openen.
+2. De eerste optie is "**▶FRAC**". Duw op **ENTER** om deze functie te selecteren.
+3. Druk nogmaals op **ENTER** om de uitkomst te berekenen.
 
 </Attention>
