--- a/src/content/lessen/wiskunde/rekenen_rationaal/komma_naar_breuk/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/komma_naar_breuk/index.mdx
@@ -28,7 +28,7 @@ Naast vermenigvuldigingen, zijn ook delingen, machten en wortels vaak **veel een
 
 Een laatste voordeel van breuken is dat je die <Mute>(in tegenstelling tot kommagetallen)</Mute> niet hoeft af te ronden, waardoor je **afrondingsfouten vermijdt**.
 
-Redenen genoeg dus om een kommagetal te kunnen omzetten naar een breuk! In deze les leggen we uit hoe je dat kan aanpakken. In de eerste paragraaf tonen we de **verschillende vormen waarin een kommagetal kan voorkomen**. In de paragrafen nadien leggen we **voor elk van deze vormen uit hoe je die kan omzetten** naar een breuk. In de laatste paragraaf leggen we je uit hoe je **met behulp van een grafisch rekentoestel** een kommagetal kan omzetten naar een breuk.
+Redenen genoeg dus om een kommagetal te leren omzetten naar een breuk! In deze les leggen we uit hoe je dat kan aanpakken. In de eerste paragraaf tonen we de **verschillende vormen waarin een kommagetal kan voorkomen**. In de paragrafen nadien leggen we **voor elk van deze vormen uit hoe je die best kan omzetten** naar een breuk. In de laatste paragraaf leggen we je uit hoe je **met behulp van een grafisch rekentoestel** een kommagetal kan omzetten naar een breuk.
 
 ## Begrensde en onbegrensde decimale vormen
 
@@ -53,7 +53,7 @@ $$
 -12&{,}764646464\ldots\\
   3&{,}141592653\ldots\\
   1&{,}414213562\ldots\\
-  0&{,}000525252\ldots
+  0&{,}000526526526\ldots
 \end{aligned}
 $$
 
@@ -77,7 +77,7 @@ Wanneer **decimalen zich blijvend herhalen**, zeggen we dat het kommagetal een *
 | $$-12{,}764646464\ldots$$  | $$64$$   |
 | $$3{,}141592653\ldots$$    | **GEEN** |
 | $$1{,}414213562\ldots$$    | **GEEN** |
-| $$0{,}000525252\ldots$$    | $$52$$   |
+| $$0{,}000526526526\ldots$$    | $$526$$   |
 
 Binnen de kommagetallen met een onbegrensde repeterende decimale vorm, bestaan er nog twee soorten: de **zuiver repterende** decimale vorm en de **gemengd repeterende** decimale vorm. Bij een **zuiver** repeterende decimale vorm, begint de **periode meteen na de komma**. Bij een **gemengd** repeterende decimale vorm, begint de **periode niet meteen na de komma**.
 
@@ -87,7 +87,7 @@ Binnen de kommagetallen met een onbegrensde repeterende decimale vorm, bestaan e
 | $$-12{,}7\orange{64}646464\ldots$$  | Gemengd repeterend |
 | $$3{,}141592653\ldots$$    | Niet-repeterend |
 | $$1{,}414213562\ldots$$    | Niet-repeterend |
-| $$0{,}000\orange{52}5252\ldots$$    | Gemengd repeterend   |
+| $$0{,}000\orange{526}526526\ldots$$    | Gemengd repeterend   |
 | $$-7{,}\orange{54}545454\ldots$$ | Zuiver repeterend |
 | $$0{,}\orange{123}123123123\ldots$$ | Zuiver repeterend |
 
@@ -180,7 +180,7 @@ $$
 \end{aligned}
 $$
 
-Je ziet dat wanneer we een bepaald getal delen door **zoveel keer het cijfer $9$ als het aantal cijfers in ons getal**, we een kommagetal krijgen waarbij **ons getal zich na de komma steeds gaat herhalen**.
+Je ziet dat wanneer we een bepaald getal delen door **zoveel keer het cijfer $9$ als het aantal cijfers in dat getal**, we een kommagetal krijgen waarbij **dat getal zich na de komma steeds gaat herhalen**.
 
 $$
 \begin{aligned}
@@ -206,7 +206,7 @@ Door een bepaald getal te delen door zoveel keer het cijfer $9$ als het aantal c
 | $$-\frac{\orange{102}}{999}$$ | $$-0{,}\orange{102}1021021\ldots$$ | $$\orange{102}$$ |
 | $$-\frac{\orange{845}}{999}$$ | $$-0{,}\orange{845}8458458\ldots$$ | $$\orange{845}$$ |
 
-Wanneer we een getal delen door **meer cijfers $9$** dan het aantal cijfers dat dat getal heeft, we een kommagetal krijgen waarbij er **nulletjes vooraan in de periode** bij zijn gekomen. Voor elke extra $9$ komt er een $0$ bij:
+Wanneer we een getal delen door **meer cijfers $9$** dan het aantal cijfers dat dat getal heeft, krijgen we een kommagetal waarbij er **nulletjes vooraan in de periode** bij zijn gekomen. Voor elke extra $9$ komt er een $0$ bij:
 
 $$
 \begin{aligned}
@@ -240,7 +240,7 @@ $$
 \end{aligned}
 $$
 
-Maar wat als we nu een kommagetal hebben in zuiver repeterende decimale vorm waarbij **het getal voor de komma niet gelijk is aan $0$**? Bijvoorbeeld:
+Maar wat als we nu een kommagetal hebben in zuiver repeterende decimale vorm waarbij **het getal vóór de komma niet gelijk is aan $0$**? Bijvoorbeeld:
 
 $$
 \begin{aligned}
@@ -373,7 +373,7 @@ $$
 $$
 
 
-## Vergelijkingen gebruiken om onbegrensd resulterende decimale vorm om te zetten naar breuk
+## Vergelijkingen gebruiken om een onbegrensd repeterende decimale vorm om te zetten naar een breuk
 
 Hoera! 🎉 Met de technieken uit de vorige paragrafen kunnen we **eender welk kommagetal met een begrensde of onbegrensd repeterende decimale vorm omzetten naar een breuk**! We zijn weer een waardevolle vaardigheid rijker! 💃
 
@@ -562,6 +562,7 @@ $$
 \end{aligned}
 $$
 Merk op dat we de breuk in de laatste stap hebben **vereenvoudigd**.
+
 * Zet $8{,}604444\ldots$ om naar een breuk. 
 Eerst **stellen we $x$ gelijk aan het kommagetal**. Het kommagetal heeft een **gemengd repeterende** decimale vorm, dus eerst moeten we vermenigvuldigen met een macht van $10$ die ervoor zorgt dat we een **zuiver repeterende** decimale vorm krijgen. Wanneer de komma twee plaatsen naar rechts zou schuiven, krijgen we een zuiver repeterende vorm. Dat betekent dat we moeten vermenigvuldigen met $100$ <Mute>($=10^2$)</Mute>:
 $$
@@ -597,6 +598,7 @@ x &= \frac{7744}{\orange{900}}\\
 \Lrarr x &= \boxed{\frac{1936}{225}}
 \end{aligned}
 $$
+
 * Zet $-2{,}4787878\ldots$ om naar een breuk.
 Eerst gelijkstellen aan $x$ en omvormen naar zuiver repeterende decimale vorm:
 $$
@@ -634,19 +636,19 @@ $$
 
 ## Kommagetal omzetten naar breuk met een grafisch rekenmachine
 
-We kunnen ook een rekenmachine gebruiken om een kommagetal om te zetten naar een breuk. Uiteraard bestaan er veel verschillende modellen van rekenmachines en kunnen we ze onmogelijk allemaal hier bespreken. Hier geef ik de uitleg voor de TI-84 Plus, maar ze geldt ook voor TI-83, TI-84 Plus CE etc. Laat gerust in de reacties weten als je een ander type rekenmachine hebt en je de functie voor het omzetten tussen kommagetal en breuk niet weet te vinden.
+We kunnen natuurlijk ook gewoon een rekenmachine gebruiken om een kommagetal om te zetten naar een breuk. Uiteraard bestaan er veel verschillende modellen van rekenmachines en kunnen we ze onmogelijk allemaal hier bespreken. Hier geef ik de uitleg voor de TI-84 Plus, maar ze geldt ook voor TI-83, TI-84 Plus CE etc. Laat gerust in de reacties weten als je een ander type rekenmachine hebt en je de functie voor het omzetten tussen kommagetal en breuk niet weet te vinden.
 
-Bij de grafische rekenmachines van Texas Instruments, vind je in het **MATH**-menu de "**▶FRAC**"-functie terug. Daarmee kan je een kommagetal omzetten naar een breuk.
+Bij de grafische rekenmachines van Texas Instruments, vind je in het **MATH**-menu de "**FRAC**"-functie terug. Daarmee kan je een kommagetal omzetten naar een breuk.
 <Mute>(*Frac* is een afkorting van het Engelse *fraction*, wat *breuk* betekent)</Mute>.
 Concreet gaat het als volgt:
 
-1. Geef het kommagetal in dat je wilt omzetten en druk op de **MATH**-toets om het **MATH**-menu te openen.
-2. De eerste optie is "**▶FRAC**". Duw op **ENTER** om deze functie te selecteren.
+1. Geef het kommagetal in dat je wilt omzetten tot **minstens 9 cijfers na de komma** en druk op de **MATH**-toets om het **MATH**-menu te openen.
+2. De eerste optie is "**FRAC**". Duw op **ENTER** om deze functie te selecteren.
 3. Druk nogmaals op **ENTER** om de uitkomst te berekenen.
 
 ![Kommagetal omgezet naar breuk met grafisch rekentoestel GRM Texas Instruments TI-84 Plus](img/ti84_kommagetal.png)
 
-Als je een berekening hebt gedaan waarvan je de uitkomst wilt omzetten naar een breuk, hoef je die uitkomst niet helemaal over te typen. Wanneer je **▶FRAC** selecteert zonder eerst een kommagetal ingegeven te hebben, zal je rekentoestel automatisch de laatste uitkomst nemen <Mute>(**ANS**, afkorting voor het Engelse *answer*, of antwoord/uitkomst in het Nederlands)</Mute>.
+Als je een berekening hebt gedaan waarvan je de uitkomst wilt omzetten naar een breuk, hoef je die uitkomst niet helemaal over te typen. Wanneer je **FRAC** selecteert zonder eerst een kommagetal ingegeven te hebben, zal je rekentoestel automatisch de laatste uitkomst nemen <Mute>(**ANS**, afkorting voor het Engelse *answer*, of antwoord/uitkomst in het Nederlands)</Mute>.
 
 ## Samengevat
 
