Replace Bokeh in functies/nulpunten

--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -60,7 +60,13 @@ Hieronder staat de grafiek getekend van de functie $f(x) = -x^2 + 9$ die de
 nul*waarden* $x=-3$ en $x=3$ heeft en dus de nul*punten* $(-3,~0)$ en $(3,~0)$.
 De twee nulpunten zijn aangeduid in het **<Orange>oranje</Orange>**.
 
-<Bokeh plot="plt/nulpunten" />
+<Plot xColor="gray" yColor="gray">
+  <Fx fx={x => -Math.pow(x, 2) + 9}/>
+  <Point x={3} y={0} color="orange" size={10}/>
+  <Annot xTarget={3} yTarget={0} xAnnot={6} yAnnot={2}>Nulpunt</Annot>
+  <Point x={-3} y={0} color="orange" size={10}/>
+  <Annot xTarget={-3} yTarget={0} xAnnot={-6} yAnnot={2}>Nulpunt</Annot>
+</Plot>
 
 ## Samengevat
 
