--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -19,7 +19,24 @@ voor de y-waarden, vatten we samen in een **tekenschema** <Mute text='(ook wel
 functie](../grafiek) is gegeven, kunnen we zien waar de functiewaarden <Mute
 text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_ zijn.
 
-<Bokeh plot="plt/tekenschema" />
+<Plot>
+<Fx fx={x => - Math.pow(x, 2) + 9} />
+<Rectangle x1={-15} x2={-3} y1={0} y2={-15} fill="red" fillOpacity={0.5} />
+<Rectangle x1={-3} x2={3} y1={0} y2={15} fill="green" fillOpacity={0.5} />
+<Rectangle x1={3} x2={15} y1={0} y2={-15} fill="red" fillOpacity={0.5} />
+<SvgNote x={-8} y={-2} backgroundOpacity={0.5}>
+
+$f(x)\lt 0$
+</SvgNote>
+<SvgNote x={0} y={2} backgroundOpacity={0.5}>
+
+$f(x)\gt 0$
+</SvgNote>
+<SvgNote x={8} y={-2} backgroundOpacity={0.5}>
+
+$f(x)\lt 0$
+</SvgNote>
+</Plot>
 
 We zien op de grafiek:
 
