Fix: replace Mute tags that used text prop

--- a/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
@@ -55,7 +55,7 @@ Lichtstralen die evenwijdig blijven, tenslotte, vormen een **evenwijdige lichtbu
 
 ## Camera obscura
 
-De camera obscura <Mute text='(Latijn voor "donkere kamer")' /> was een van de
+De camera obscura <Mute>(Latijn voor "donkere kamer")</Mute> was een van de
 eerste apparaten waarmee beeldvorming kon worden gedaan. In haar meest
 eenvoudige vorm bestaat ze uit een donkere ruimte met in één van de
 wanden een klein gaatje naar de <Mute>(verlichte)</Mute>
