--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -36,9 +36,7 @@ tussen $\orange{1{,}00~\si{s}}$ en $\orange{3{,}00~\si{s}}$.
 
 ![Gemiddelde snelheid van Maria tussen 1 s en 3 s berekenen](img/maria_avg_speed_1s_3s.png)
 
-Daarvoor moeten we de **afgelegde afstand** <Mute text="(hoeveel (kilo)meter?)"
-/> delen door de **tijd die nodig was** <Mute text="(hoeveel uur of seconden?)"
-/> om die afstand af te leggen:
+Daarvoor moeten we de **afgelegde afstand** <Mute>(hoeveel (kilo)meter?)</Mute> delen door de **tijd die nodig was** <Mute>(hoeveel uur of seconden?)</Mute> om die afstand af te leggen:
 
 $$
 \begin{aligned}
