--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -101,8 +101,7 @@ andere voorbeelden:
 
 De graad van een eenterm is de **som van de exponenten** van alle variabelen.
 De eenterm $-4xy^\blue{3}$, bijvoorbeeld, is van de **vierde graad** omdat er
-bij $x$ een macht van $\orange{1}$ staat <Mute text="(die schrijven we niet)"
-/> en bij $y$ een macht van $\blue{3}$: $-4x^\orange{1}y^\blue{3}$ en
+bij $x$ een macht van $\orange{1}$ staat <Mute>(die schrijven we niet)</Mute> en bij $y$ een macht van $\blue{3}$: $-4x^\orange{1}y^\blue{3}$ en
 $\orange{1} + \blue{3} = 4$.
 
 | Eenterm                              | Graad                                                                                                             |
