--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -132,7 +132,7 @@ $$
 
 
 Als we die lijn omdraaien, krijgen we een soort **omgekeerde
-distributiviteit** <Mute text='(dit noemen we ook wel "afzonderen")' />:
+distributiviteit** <Mute>(dit noemen we ook wel "afzonderen")</Mute>:
 
 
 $$
