--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -90,7 +90,7 @@ $$
 Het wordt lastig om altijd "$\text{oppervlakte}$" , "$\orange{\text{lengte}}$" en
 "$\blue{\text{breedte}}$" te schrijven. Daarom gaan we onze variabelen **afkorten**.
 Dat kunnen we bijvoorbeeld doen met **een letter**, zoals $A$ voor de
-oppervlakte <Mute text='(van het Engelse "Area")' />, $\orange{l}$ voor de
+oppervlakte <Mute>(van het Engelse "Area")</Mute>, $\orange{l}$ voor de
 lengte en $\blue{b}$ voor de breedte. Onze
 formule wordt dan ook veel eenvoudiger om te schrijven:
 
