--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -13,11 +13,7 @@ positief of negatief is. Deze informatie vatten we overzichtelijk samen in een
 
 ## Tekenschema vanuit een grafiek
 
-Welke x-waarden welk teken <Mute>(positief/negatief/nul)</Mute> opleveren
-voor de y-waarden, vatten we samen in een **tekenschema** <Mute text='(ook wel
-"tekentabel" of "tekenverloop" genoemd)'/>.  Als de [grafiek van een
-functie](../grafiek) is gegeven, kunnen we zien waar de functiewaarden <Mute
-text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_ zijn.
+Welke x-waarden welk teken <Mute>(positief/negatief/nul)</Mute> opleveren voor de y-waarden, vatten we samen in een **tekenschema** <Mute>(ook wel "tekentabel" of "tekenverloop" genoemd)</Mute>.  Als de [grafiek van een functie](../grafiek) is gegeven, kunnen we zien waar de functiewaarden <Mute>(of de y-waarden)</Mute> _positief_, _negatief_ of _nul_ zijn.
 
 <Plot>
 <Fx fx={x => - Math.pow(x, 2) + 9} />
