Refactor plot and draw components

--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -29,7 +29,7 @@ In de voorlaatste rij van die waardentabel is $\orange{x = 4}$ en $\green{y =
 $(\orange{4};~\green{2})$.
 
 <Plot xColor="orange" yColor="green">
-<Hair x={4} y={2}/>
+<HairLines x={4} y={2}/>
 <Annot xTarget={4} yTarget={2} xAnnot={8} yAnnot={4}>
 
 $(\orange{4};~\green{2})$
