Add png versions of visx svgs to front matters

--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -3,7 +3,7 @@ title: "Link met functies"
 date: 2019-01-09T18:17:33+01:00
 weight: 4
 tags: []
-image: plt/snijpunt.png
+image: img/wiskunde_1g_vgl_functies-1.png
 ---
 
 [Vergelijkingen](../intro) en [functies](../../functies/intro) zijn zeer nauw
