--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -4,7 +4,7 @@ date: 2018-07-01T22:13:11+02:00
 weight: 5
 tags: ["Functies", "Analyse"]
 topic: analyse
-image: plt/fx.png
+image: img/wiskunde_functies_domein_beeld-2.png
 ---
 
 import {Fragment} from "react";
