--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -4,7 +4,7 @@ date: 2018-10-01T22:13:11+02:00
 weight: 4
 wiski: "http://wiski.be/oefenen/grafische-voorstelling-van-elementaire-functies/take"
 tags: ["Functies", "grafieken", "plot", "Analyse"]
-image: plt/single_x.png
+image: img/wiskunde_functies_grafiek-2.png
 ---
 
 import {Fragment} from "react";
