--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -3,7 +3,7 @@ title: "Nulpunten en nulwaarden"
 date: 2018-07-01T22:13:11+02:00
 weight: 6
 tags: ["Functies", "Analyse"]
-image: plt/nulpunten.png
+image: img/wiskunde_functies_nulpunten-1.png
 ---
 
 In veel toepassingen van functies zijn we geïnteresseerd in de waarde die we
