--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -3,7 +3,7 @@ title: "Tekenschema"
 date: 2019-01-04T18:56:13+01:00
 weight: 7
 tags: ["Functies", "Analyse"]
-image: plt/tekenschema.png
+image: img/wiskunde_functies_tekenschema-1.png
 ---
 
 Naast het kennen van [de nulpunten](../nulpunten) van een functie, is het ook
