--- a/src/content/lessen/wiskunde/functies/_index.mdx
+++ b/src/content/lessen/wiskunde/functies/_index.mdx
@@ -3,5 +3,5 @@ title: "Functies"
 weight: 4
 level: 3
 topic: "analyse"
-image: domein_beeld/plt/fx.png
+image: domein_beeld/img/wiskunde_functies_domein_beeld-1.png
 ---
