Add callable exVars and callable solutions

--- a/content/wiskunde/functies/nulpunten/index.mdx
+++ b/content/wiskunde/functies/nulpunten/index.mdx
@@ -45,7 +45,9 @@ De namen _nulpunten_ en _nulwaarden_ worden soms door elkaar gebruikt, maar
 strikt gezien zijn ze niet hetzelfde. Nul*waarden* zijn x-_waarden_, maar
 nul*punten* zijn _punten_ met een x- én y-coördinaat. De x-coördinaat van een
 nulpunt is de nul*waarde*. De y-coördinaat van een nulpunt is altijd
-_nul_ <Mute>(uiteraard)</Mute>. Als de nulwaarde bijvoorbeeld $\orange{-2}$ is,
+_nul_ <Mute>(uiteraard)</Mute>.
+
+Als de nulwaarde bijvoorbeeld $\orange{-2}$ is,
 dan is het nulpunt $(\orange{-2},~0)$.
 
 ## Nulpunten op een grafiek
